kubernetes/api-gateway/deploy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-gateway
  namespace: petclinic
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: petclinic
spec:
  replicas: 2
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
  rollbackWindow:
    revisions: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
  strategy:
    canary:
      stableService: api-gateway-stable
      canaryService: api-gateway-canary
      maxSurge: 1
      maxUnavailable: 0
      trafficRouting:
        alb:
          ingress: frontend-proxyr
          rootService: api-gateway
          servicePort: 8080
      steps:
        - setWeight: 20
        - pause:
            duration: 2m
        - analysis:
            templates:
              - templateName: api-gateway-prometheus-analysis
            args:
              - name: prometheus-address
                value: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
              - name: canary-service
                value: api-gateway-canary
        - pause: {}

#  after shifting 20% traffic, wait a bit so Prometheus has data
# run analysis against canary metrics
# only then move to the manual approval pause
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/part-of: petclinic
    spec:
      nodeSelector:
        role: frontend
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: app-config
          configMap:
            name: api-gateway-config
        - name: tmp
          emptyDir: {}
      containers:
        - name: api-gateway
          image: tejupagudala/api-gateway:37784893269
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: app-config
              mountPath: /config/application.yml
              subPath: application.yml
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              memory: "512Mi"
