kubernetes/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: petclinic
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: spring-petclinic
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: use-annotation
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-stable
  namespace: petclinic
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/component: stable
    app.kubernetes.io/part-of: spring-petclinic
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-canary
  namespace: petclinic
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/component: canary
    app.kubernetes.io/part-of: spring-petclinic
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
